--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-react-app-babylonjs",
-  "homepage": "https://brianzinn.github.io/create-react-app-babylonjs/",
+  "homepage": "https://github.com/nonono21/test",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
